<resources>
    <string name="app_name">LuxorGuide</string>
    <string name="temples">Temples</string>
    <string name="museums">Museums</string>
    <string name="valleys">Valleys</string>
    <string name="restaurants">Restaurants</string>
    <string name="entertainment">Entertainment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="luxor_temple">Luxor Temple</string>
    <string name="luxor_temple_info"> Luxor Temple is an ode to the changing face of Egypt throughout the centuries.</string>
    <string name="karnak_temple">Karnak Temple</string>
    <string name="karnak_temple_info">"Of all Luxor's many monuments, the Karnak has to be its most astonishing and beautiful feat."</string>
    <string name="dair_bahri_temple">Dair Al-Bahri</string>
    <string name="dair_bahri_temple_info">The Temple is magnificently situated at the foot of the sheer cliffs fringing the desert hills.</string>
    <string name="kom_ombo_temple">KomOmbo Temple</string>
    <string name="kom_ombo_temple_info">"One of the Nile Valley's most beautifully sited temples, It is dedicated to two gods."</string>
    <string name="mortuary_temple">Mortuary Temple</string>
    <string name="mortuary_temple_info">"The Mortuary Temple of Seti I is dedicated to Amun and to the cult of the king's father Ramses I."</string>
    <string name="luxor_museum">Luxor Museum</string>
    <string name="luxor_museum_info">"One of Egypt's best museums, Luxor Museum holds a beautifully exhibited collection from the local area."</string>
    <string name="karnak_museum">Karnak Museum</string>
    <string name="karnak_museum_info">An Open Air Museum contains reconstructions of that have been dismantled inside the massive pylons.</string>
    <string name="mummification_museum">Mummification</string>
    <string name="mummification_museum_info">Explains the processes behind the ancient Egyptian mummification in a series of well informative displays.</string>
    <string name="nobbles_art_gallery_museum">Nobbles Gallery</string>
    <string name="nobbles_art_gallery_museum_info">"If you haven't had your fill of tombs in the Valley of the Kings then make a beeline for the Nobles."</string>
    <string name="valley_kings">Kings Valley</string>
    <string name="valley_kings_info">Within the valley are 63 tombs, which are a roll-call of famous names of Egyptian history.</string>
    <string name="valley_queens">Queens Valley</string>
    <string name="valley_queens_info">The tombs mostly belong to the 19th and 20th dynasties. A total of almost 80 tombs are now known.</string>
    <string name="medinet_habu_valley">Medinet Habu</string>
    <string name="medinet_habu_valley_info">"Often gets overlooked on a West Bank trip, but this is one of Egypt's most beautifully decorated temples."</string>
    <string name="deir_almadina_valley">Deir Al-Medina</string>
    <string name="deir_almadina_valley_info">"The Home to a small temple, the remnants of a workers' village and the tombs of the workers themselves."</string>
    <string name="hot_air_ballooning">Air Balloon Ride</string>
    <string name="hot_air_ballooning_info">For great aerial views over the entire west bank, with its temples and village farmland in the escarpment.</string>
    <string name="felucca_ride">Felucca Ride to Banana Island</string>
    <string name="felucca_ride_info">"If you sail back just on sunset, you'll get to see the river at its most majestic."</string>
    <string name="nile_cruise">Nile Cruise</string>
    <string name="nile_cruise_info">Enjoy Nile Cruise from Luxor to Aswan, one of the best ways to see Egypt.</string>
    <string name="sahaby_lane_restaurant">Al Sahaby Rest</string>
    <string name="sahaby_lane_restaurant_info">Al-Sahaby restaurant serves a variety of international and authentic Egyptian and Bedouin food.</string>
    <string name="saha_restaurant">Saha Restaurant</string>
    <string name="saha_restaurant_info">The ambiance is soothing yet hip and cool. There’s so many different rooms to suit your fancy.</string>
    <string name="aisha_restaurant">Aisha Restaurant</string>
    <string name="aisha_restaurant_info">Aisha Restaurant is just one of the fantastic sites in Luxor.</string>
</resources>